docs: add professional README with badges, features, architecture, and setup guide